# asteroid-alarmclock

./: AlarmDialog.qml  AlarmTimePickerDialog.qml  AlarmViewRepeater.qml  CMakeLists.txt  DayButton.qml  README.md  asteroid-alarmclock.ca.ts  asteroid-alarmclock.ckb.ts  asteroid-alarmclock.cs.ts  asteroid-alarmclock.de.ts  asteroid-alarmclock.desktop  asteroid-alarmclock.el.ts  asteroid-alarmclock.es.ts  asteroid-alarmclock.fa.ts  asteroid-alarmclock.fr.ts  asteroid-alarmclock.hu.ts  asteroid-alarmclock.it.ts  asteroid-alarmclock.kab.ts  asteroid-alarmclock.ko.ts  asteroid-alarmclock.nl.ts  asteroid-alarmclock.pl.ts  asteroid-alarmclock.pro  asteroid-alarmclock.pt_BR.ts  asteroid-alarmclock.ru.ts  asteroid-alarmclock.sk.ts  asteroid-alarmclock.sv.ts  asteroid-alarmclock.ta.ts  asteroid-alarmclock.tr.ts  asteroid-alarmclock.uk.ts  asteroid-alarmclock.zh_CN.ts  asteroid-alarmclock.zh_Hans.ts  clockHelper.js  com.nokia.voland.service  main.cpp  main.qml  open-alarm.service  resources.qrc
alarmclock/: AlarmListItem.qml  AlarmTimePickerDialog.qml  AlarmViewRepeater.qml  CMakeLists.txt  DayButton.qml  DaysSelectorDialog.qml  PageDot.qml  TimePickerDialog.qml  alarmclock.pro  asteroid-alarmclock.desktop.template  asteroid-alarmclock.in  main.qml  resources.qrc
alarmclock/i18n/: asteroid-alarmclock.ar_AR.ts  asteroid-alarmclock.ast.ts  asteroid-alarmclock.az.ts  asteroid-alarmclock.be.ts  asteroid-alarmclock.bqi.ts  asteroid-alarmclock.ca.ts  asteroid-alarmclock.ckb.ts  asteroid-alarmclock.cs.ts  asteroid-alarmclock.da.ts  asteroid-alarmclock.de_DE.ts  asteroid-alarmclock.desktop.h  asteroid-alarmclock.el.ts  asteroid-alarmclock.en_GB.ts  asteroid-alarmclock.en_devel.ts  asteroid-alarmclock.eo.ts  asteroid-alarmclock.es.ts  asteroid-alarmclock.es_AR.ts  asteroid-alarmclock.fa.ts  asteroid-alarmclock.fi.ts  asteroid-alarmclock.fil.ts  asteroid-alarmclock.fr.ts  asteroid-alarmclock.gl.ts  asteroid-alarmclock.he.ts  asteroid-alarmclock.hi.ts  asteroid-alarmclock.hr.ts  asteroid-alarmclock.hu.ts  asteroid-alarmclock.ia.ts  asteroid-alarmclock.id.ts  asteroid-alarmclock.isv.ts  asteroid-alarmclock.it.ts  asteroid-alarmclock.ja.ts  asteroid-alarmclock.ka.ts  asteroid-alarmclock.kab.ts  asteroid-alarmclock.kn.ts  asteroid-alarmclock.ko.ts  asteroid-alarmclock.lb.ts  asteroid-alarmclock.lt.ts  asteroid-alarmclock.mr.ts  asteroid-alarmclock.ms.ts  asteroid-alarmclock.nb.ts  (+27 more)
alarmpresenter/: CMakeLists.txt  alarmpresenter.pro  alarmpresenter.service  asteroid-alarmpresenter.in  com.nokia.voland.service  main.cpp  main.qml
i18n/: asteroid-alarmclock.ca.ts  asteroid-alarmclock.ckb.ts  asteroid-alarmclock.es.ts  asteroid-alarmclock.fi.ts  asteroid-alarmclock.fr.ts  asteroid-alarmclock.hu.ts  asteroid-alarmclock.it.ts  asteroid-alarmclock.kab.ts  asteroid-alarmclock.nl.ts  asteroid-alarmclock.pl.ts  asteroid-alarmclock.pt_BR.ts  asteroid-alarmclock.ru.ts  asteroid-alarmclock.sv.ts  asteroid-alarmclock.tr.ts  asteroid-alarmclock.uk.ts  asteroid-alarmclock.zh_CN.ts  asteroid-alarmclock.zh_Hans.ts
